// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə kiːg ʂiːz ðə wʊdf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə ɖɔgs ʂiː ðə wʊdfs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə kiːg wɔkɪŋz æʈ ðə ɹiːvəɹ",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə kiːg ɳaʈ ʂiːz ðə wʊdf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ɾege wideɾeʔt lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kakane wideɾent lulupuum",
    },
    {
      "english": "i give you the bread",
      "target": "ego daɾeoː tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "ɾege ambulaɾeʔt hlume",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ɾege non wideɾeʔt lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "niminimi luhin hojeːni",
    },
    {
      "english": "the dogs see the wolves",
      "target": "hohojeːni luhin hohojeːni",
    },
    {
      "english": "i give you the bread",
      "target": "mi kaːnaː sina",
    },
    {
      "english": "the king walks at the river",
      "target": "niminimi kaːjaːtawo sæki teːlohuno",
    },
    {
      "english": "the king does not see the wolf",
      "target": "niminimi ala luhin hojeːni",
    },
  ],
  "preset": "tokipona",
}
`;
